[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
name = "target-tests"
publish = false
version = "0.1.0"

[[test]]
name = "scd30"
harness = false

[dev-dependencies]
cortex-m = "0.7.1"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
defmt-test = "0.2.0"
nrf52840-hal = "0.12.0"
panic-probe = { version = "0.2.0", features = ['print-defmt'] }
scd30 = { path = ".." }

[features]
default = ['defmt-trace']
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'